# single_page_python

./: .gitignore  LICENSE  README.md  build.sh  package-lock.json  package.json  pyproject.toml
src/: build_tools.py  single_page_python.py
src/single_page_python/: server.py
src/single_page_python/templates/: index.html.j2
