# Copyright 2025 Stefan Meisner Larsen
# Licensed under the MIT License.

[build-system]
requires = ["setuptools >= 80", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "single_page_python"
version = "0.0.1"
description = "Single Page Web Application with Python and JavaScript"
authors = [{name = "Stefan Meisner Larsen", email="developer@meisner-larsen.dk"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["flask"]

[project.optional-dependencies]
dev = ["build"]